--- a/student.html
+++ b/student.html
@@ -9,7 +9,7 @@
 </head>
 <body>  
   <div class="container">
-    <div class="card  text-center">
+    <div class="card  text-center mt-5">
       <h1>Students List</h1>
       <div class="card-header">        
         <h3>Students</h3>
@@ -45,7 +45,7 @@
             <table class="table table-striped" id="single-student">
               <thead>
                 <tr>
-                  <th id="student-name"></th>
+                  <th id="student-name" class="text-center" colspan="3"></th>
                 </tr>
                 <tr>
                   <th>Subject</th>
@@ -67,6 +67,6 @@
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-  <script src="app.js"></script>
+  <script src="appStudent.js"></script>
 </body>
 </html>
