--- a/index.html
+++ b/index.html
@@ -7,14 +7,23 @@
   <title>Student E-diary</title>
 </head>
 <body>
-  <h1>Student E-Diary</h1>
-  <p>Welcome in Home Page</p>
-  <a href="student.html" id="students-list">Students lists</a>
-  <a href="#" id="subjects-list">Shool subjects lists</a>
+  <div class="container mt-5">
+    <div class="card">
+      <div class="card-header text-center">
+        <h1>Student E-Diary</h1>
+      </div>
+      <div class="card-body">
+        <h5 class="card-title text-center mb-5">Welcome in Home Page</h5>
+        <a href="student.html" id="students-list" class="btn btn-primary btn-lg btn-block">Students lists</a>
+        <a href="subject.html" id="subjects-list" class="btn btn-primary btn-lg btn-block">Shool subjects lists</a>
+      </div>
+    </div>
+    
+  </div>
+  
   
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-  <script src="app.js"></script>
 </body>
 </html>
