--- a/student.html
+++ b/student.html
@@ -11,8 +11,9 @@
   <div class="container">
     <div class="card  text-center mt-5">
       <h1>Students List</h1>
-      <div class="card-header">        
+      <div class="card-header btn-toolbar justify-content-between px-5">        
         <h3>Students</h3>
+        <button type="button" class="btn btn-success" data-toggle="modal" data-target="#addModal" ><i class="fas fa-plus-circle"></i></button>
       </div>
       <div class="card-body">
         <table class="table" id="students-list-table">
@@ -20,14 +21,16 @@
             <tr >
               <th scope="col">Id</th>
               <th scope="col">Name</th>
-              <th scope="col">Surename</th>
+              <th scope="col">Surname</th>
               <th scope="col"></th>
             </tr>
           </thead>
           <tbody id="students-list-table-body">
-      
+            
           </tbody>
         </table>
+
+
       </div>
     </div>
 
@@ -48,7 +51,7 @@
                   <th id="student-name" class="text-center" colspan="3"></th>
                 </tr>
                 <tr>
-                  <th>Subject</th>
+                  <th>Subjects</th>
                   <th>Grade</th>
                   <th>Average </th>
                 </tr>
@@ -59,6 +62,41 @@
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
           </div>          
+        </div>
+      </div>
+    </div>
+
+    <!--Add Student Modal-->
+
+    <div class="modal fade" id="addModal" tabindex="-1" role="dialog" aria-labelledby="addModalLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="addModalLabel">New Student</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body" id="modal-body-create-student">
+            <form id="form-create-student">
+              <div class="form-group">
+                <label for="student-id" class="col-form-label" >Student number:</label>
+                <input type="number" class="form-control" id="new-student-id" placeholder="id">
+              </div>
+              <div class="form-group">
+                <label for="student-name" class="col-form-label">Student name:</label>
+                <input type="text" class="form-control" id="new-student-name" placeholder="Name">
+              </div>
+              <div class="form-group">
+                <label for="student-surname" class="col-form-label">Student surname:</label>
+                <input type="text" class="form-control" id="new-student-surname" placeholder="Surname">
+              </div>
+            </form>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary" id="btn-add-student">Add student</button>
+          </div>
         </div>
       </div>
     </div>
