--- a/subject.html
+++ b/subject.html
@@ -11,8 +11,9 @@
   <div class="container">
     <div class="card  text-center mt-5">
       <h1>Subject List</h1>
-      <div class="card-header">        
+      <div class="card-header btn-toolbar justify-content-between px-5">        
         <h3>Subject</h3>
+        <button type="button" class="btn btn-success" data-toggle="modal" data-target="#addSubjectModal" ><i class="fas fa-plus-circle"></i></button>
       </div>
       <div class="card-body">
         <table class="table" id="subject-list-table">
@@ -31,8 +32,8 @@
     </div>
 
     <!--Modal-->
-    <div class="modal fade" id="modal" tabindex="-1" role="dialog" aria-labelledby="modalLabel" aria-hidden="true">
-      <div class="modal-dialog" role="document">
+    <div class="modal fade bd-modal-lg" id="modal" tabindex="-1" role="dialog" aria-labelledby="modalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
           <div class="modal-header">
             <h5 class="modal-title" id="modalLabel">Subject data</h5>
@@ -62,6 +63,37 @@
       </div>
     </div>
   </div> 
+
+  <!--Add Subject Modal-->
+
+  <div class="modal fade" id="addSubjectModal" tabindex="-1" role="dialog" aria-labelledby="addSubjectModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="addSubjectModalLabel">New Subject</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body" id="modal-body-create-subject">
+          <form id="form-create-subject">
+            <div class="form-group">
+              <label for="subject-id" class="col-form-label" >Subject number:</label>
+              <input type="number" class="form-control" id="new-subject-id" placeholder="id">
+            </div>
+            <div class="form-group">
+              <label for="subject-name" class="col-form-label">Subject name:</label>
+              <input type="text" class="form-control" id="new-subject-name" placeholder="Name">
+            </div>
+          </form>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary" id="btn-add-subject">Add subject</button>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
