Adding styles to the addGradesBtn button

--- a/subject.html
+++ b/subject.html
@@ -32,8 +32,8 @@
     </div>
 
     <!--Modal-->
-    <div class="modal fade bd-modal-lg" id="modal" tabindex="-1" role="dialog" aria-labelledby="modalLabel" aria-hidden="true">
-      <div class="modal-dialog modal-lg" role="document">
+    <div class="modal fade bd-modal-xl" id="modal" tabindex="-1" role="dialog" aria-labelledby="modalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-xl" role="document">
         <div class="modal-content">
           <div class="modal-header">
             <h5 class="modal-title" id="modalLabel">Subject data</h5>
@@ -45,7 +45,7 @@
             <table class="table table-striped" id="single-subject">
               <thead>
                 <tr>
-                  <th id="subject-name" class="text-center" colspan="3"></th>
+                  <th id="subject-name" class="text-center" colspan="4"></th>
                 </tr>
                 <tr>
                   <th>Student</th>
